--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 html {
-    margin: 0 auto;
+    margin: 0;
     padding: 0;
     background: rgba(255, 255, 255, 0.776) url(./images/background.jpg) center center no-repeat;
     background-size: cover;
@@ -8,7 +8,6 @@ html {
     font-size: 16px;
     line-height: 1.5em;
     height: 100%;
-    width: 100%;
 }
 
 body {
@@ -16,6 +15,7 @@ body {
     place-items: center;
     padding: 0;
     margin: 0;
+    
 }
     .AppWrapper {
         display: block;
@@ -23,10 +23,9 @@ body {
         padding: 0;
     }
         .MainContent {
-            margin-top: 5vh;
+           padding-top: 3rem;
             text-align: center; 
         }
-        @media (min-width: 500px) { .MainContent { margin-right: 6vw; margin-left: 6vw; } }
             .MainTitle {
                 font-size: 3rem;
                 line-height: 3rem;
@@ -46,7 +45,7 @@ body {
                 align-items: center;
                 justify-content: center;
                 margin: auto;
-                padding: 0ș
+                padding: 0;
             }
                 .ResourceList {
                     margin: 0;
@@ -73,3 +72,16 @@ body {
                         .ResourceItem:hover {
                             background: rgba(255, 190, 152, 0.493);
                         }
+        footer {
+            display: block;
+            clear: both;
+            font-size: 0.9rem;
+            border-top: 1px solid white;
+            width: 80vw;
+            margin: 0 auto;
+            padding: 0;
+            margin-top: 3rem;
+        }
+            p {
+                text-align: center;
+            }
