--- a/style.css
+++ b/style.css
@@ -11,11 +11,12 @@ html {
 }
 
 body {
-    display: block;
+    display: flex;
+    justify-content: center;
     place-items: center;
     padding: 0;
     margin: 0;
-    
+    height: 100%;
 }
     .AppWrapper {
         display: block;
