--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@ html {
     font-family: 'Oxygen', sans-serif;
     font-size: 16px;
     line-height: 1.5em;
-    height: 100%;
 }
 
 body {
@@ -16,15 +15,15 @@ body {
     place-items: center;
     padding: 0;
     margin: 0;
-    height: 100%;
 }
+    /*MAIN Page*/
     .AppWrapper {
         display: block;
         margin: 0;
         padding: 0;
     }
         .MainContent {
-           padding-top: 3rem;
+            padding-top: 3rem;
             text-align: center; 
         }
             .MainTitle {
@@ -91,3 +90,5 @@ body {
                 text-align: center;
                 color: peachpuff;
             }
+
+    /* MATERIALE Page */
